[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jana-tools"
version = "0.1.0"
description = "Toolkit for handling Jana2020 input/output files"
authors = [
    { name = "Paul B. Klar", email = "paul.klar@uni-bremen.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pathlib"
]

[project.scripts]
jana-tools = "jana_tools.cli.run:main"

[project.urls]
Homepage = "https://github.com/pbklar/jana_tools"
Repository = "https://github.com/pbklar/jana_tools"
